fix(playlist-tracks): Align duration by center

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -140,6 +140,8 @@
                     &.track-duration {
                         padding-left: 16px;
                         padding-right: 16px;
+
+                        text-align: center;
                     }
 
                     &.track-index {
